# kelly-risk-managment

./: .readthedocs.yaml  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  example_mt5_data.csv  nginx.conf  pyproject.toml
.github/workflows/: docs.yml
docs/: README_es.rst  api_reference.rst  api_reference_es.rst  architecture.rst  audit_report.rst  changelog.rst  conf.py  configuration.rst  contributing.rst  developer_guide.rst  examples.rst  index.rst  installation.rst  installation_es.rst  license.rst  quickstart.rst  quickstart_es.rst  requirements.txt  troubleshooting.rst  user_guide.rst  user_guide_es.rst
mql5/: README.md
mql5/Experts/: RiskOptimaEA.mq5
mql5/Include/: Communication.mqh  RiskOptimaEngine.mqh
mql5/Scripts/: RiskOptimaTester.mq5
scripts/: build-mql5.bat  docker-build.ps1  run.ps1  setup.ps1
src/: lib.rs
src/risk_optima_engine/: __init__.py  backend.py  frontend.py  main.py  mt5_integration.py  mt5_live_data.py
tests/: test_rust_core.py
