[package]
name = "risk_optima_core"
version = "1.1.0"
edition = "2021"

[lib]
name = "risk_optima_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
rayon = "1.8.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
xml-rs = "0.8"
anyhow = "1.0"
thiserror = "1.0"
